Update Swagger Annotations
- BOSH 파트 Swagger 주석 작성.
